...
        >
          {text.length}/{MESSAGE_MAX_LENGTH}
        </UI.Text>
      ) : null}
      <UI.Box position="absolute" bottom={2} right={2}>
        <UI.IconButton
          aria-label="Send"
          icon={faPaperPlane}
          colorScheme="action"
          variant="solid"
          size="sm"
          onClick={handleSend}
          isDisabled={!canSend}
...
